--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^8.1.0",
+        "php": ">=7.2",
         "php-http/discovery": "^1.15.2",
         "php-http/multipart-stream-builder": "^1.2.0",
         "psr/http-client": "^1.0.1",
